# nand2tetris

./: .gitignore
1/: And.hdl  DMux4Way.hdl  DMux8Way.hdl  Or.hdl  Or8Way.hdl  Xor.hdl
2/: ALU.hdl  Add16.hdl  FullAdder.hdl
3/: Bit.hdl  PC.hdl  RAM16K.hdl  RAM4K.hdl  RAM512.hdl  RAM64.hdl  RAM8.hdl  Register.hdl
4/fill/: Fill.asm  Fill.hack
4/mult/: Mult.asm  Mult.hack
5/: CPU.hdl  Computer.hdl  Memory.hdl
6/assembler/: Cargo.toml
6/assembler/src/: code.rs  instructions.rs  main.rs  parser.rs
6/assembler/src/instructions/: error.rs  mod.rs  opcodes.rs
translators/: Cargo.toml
translators/.cargo/: config.toml
translators/src/: main.rs
translators/src/assembler/: code.rs  mod.rs  parser.rs  parser_new.rs
translators/src/assembler/instructions/: flags.rs  mod.rs
translators/src/instructions/: base_symbols.rs  error.rs  flags.rs  mod.rs  opcodes.rs
translators/src/vm_translator/: helpers.rs  labels.rs  mod.rs  parser.rs
