[package]
name = "translator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
ariadne = "0.6.0"
bitflags = { version = "2.13.0" }
chumsky = "0.13.0"
clap = { version = "4.6.1", features = ["derive"] }
regex = "1.12.4"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
